log/nodejs/nodejs_api_error.log
2025-09-24T11:10:50.933Z [error] : Error : WHERE parameter "id" has invalid "undefined" value Error: WHERE parameter "id" has invalid "undefined" value
    at PostgresQueryGenerator.whereItemQuery (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1746:13)
    at /home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1737:25
    at Array.forEach (<anonymous>)
    at PostgresQueryGenerator.whereItemsQuery (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1735:35)
    at /home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1843:30
    at Array.map (<anonymous>)
    at PostgresQueryGenerator._whereGroupBind (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1842:21)
    at PostgresQueryGenerator.whereItemQuery (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1793:19)
    at /home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1737:25
    at Array.forEach (<anonymous>) 
2025-09-24T11:24:22.506Z [error] : uncaughtException: Unexpected token ';'
/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/controllers/company.controller.js:186
  });
    ^

SyntaxError: Unexpected token ';'
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/routes/company.routes.js:3:27)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10) {"error":{},"stack":"/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/controllers/company.controller.js:186\n  });\n    ^\n\nSyntaxError: Unexpected token ';'\n    at wrapSafe (node:internal/modules/cjs/loader:1378:20)\n    at Module._compile (node:internal/modules/cjs/loader:1428:41)\n    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)\n    at Module.load (node:internal/modules/cjs/loader:1288:32)\n    at Module._load (node:internal/modules/cjs/loader:1104:12)\n    at Module.require (node:internal/modules/cjs/loader:1311:19)\n    at require (node:internal/modules/helpers:179:18)\n    at Object.<anonymous> (/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/routes/company.routes.js:3:27)\n    at Module._compile (node:internal/modules/cjs/loader:1469:14)\n    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)","exception":true,"date":"Wed Sep 24 2025 16:54:22 GMT+0530 (India Standard Time)","process":{"pid":387042,"uid":1000,"gid":1000,"cwd":"/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api","execPath":"/home/parul/.nvm/versions/node/v20.18.0/bin/node","version":"v20.18.0","argv":["/home/parul/.nvm/versions/node/v20.18.0/bin/node","/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/index.js"],"memoryUsage":{"rss":151113728,"heapTotal":90542080,"heapUsed":62971360,"external":6993483,"arrayBuffers":3471915}},"os":{"loadavg":[1.02,1.19,1.27],"uptime":26647.6},"trace":[{"column":20,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1378,"method":null,"native":false},{"column":41,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1428,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Module._extensions..js","line":1548,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1288,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module._load","line":1104,"method":"_load","native":false},{"column":19,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1311,"method":"require","native":false},{"column":18,"file":"node:internal/modules/helpers","function":"require","line":179,"method":null,"native":false},{"column":27,"file":"/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/routes/company.routes.js","function":null,"line":3,"method":null,"native":false},{"column":14,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1469,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Module._extensions..js","line":1548,"method":".js","native":false}]}
2025-09-24T12:24:29.026Z [error] : uncaughtException: Route.get() requires a callback function but got a [object Undefined]
Error: Route.get() requires a callback function but got a [object Undefined]
    at Route.<computed> [as get] (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/express/lib/router/route.js:216:15)
    at proto.<computed> [as get] (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/express/lib/router/index.js:521:19)
    at Object.<anonymous> (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/units.routes.js:9:8)
    at Module._compile (node:internal/modules/cjs/loader:1706:14)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12) {"error":{},"stack":"Error: Route.get() requires a callback function but got a [object Undefined]\n    at Route.<computed> [as get] (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/express/lib/router/route.js:216:15)\n    at proto.<computed> [as get] (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/express/lib/router/index.js:521:19)\n    at Object.<anonymous> (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/units.routes.js:9:8)\n    at Module._compile (node:internal/modules/cjs/loader:1706:14)\n    at Object..js (node:internal/modules/cjs/loader:1839:10)\n    at Module.load (node:internal/modules/cjs/loader:1441:32)\n    at Function._load (node:internal/modules/cjs/loader:1263:12)\n    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\n    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)\n    at Module.require (node:internal/modules/cjs/loader:1463:12)","exception":true,"date":"Wed Sep 24 2025 17:54:29 GMT+0530 (India Standard Time)","process":{"pid":95693,"uid":1000,"gid":1000,"cwd":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api","execPath":"/home/acewebx/.nvm/versions/node/v22.19.0/bin/node","version":"v22.19.0","argv":["/home/acewebx/.nvm/versions/node/v22.19.0/bin/node","/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/index.js"],"memoryUsage":{"rss":155279360,"heapTotal":89432064,"heapUsed":71012176,"external":6207174,"arrayBuffers":3749257}},"os":{"loadavg":[1.81,1.88,1.88],"uptime":30761.44},"trace":[{"column":15,"file":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/express/lib/router/route.js","function":"Route.<computed> [as get]","line":216,"method":"<computed> [as get]","native":false},{"column":19,"file":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/express/lib/router/index.js","function":"proto.<computed> [as get]","line":521,"method":"<computed> [as get]","native":false},{"column":8,"file":"/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/api/v1.0.1/routes/units.routes.js","function":null,"line":9,"method":null,"native":false},{"column":14,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1706,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Object..js","line":1839,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1441,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Function._load","line":1263,"method":"_load","native":false},{"column":14,"file":"node:diagnostics_channel","function":"TracingChannel.traceSync","line":322,"method":"traceSync","native":false},{"column":24,"file":"node:internal/modules/cjs/loader","function":"wrapModuleLoad","line":237,"method":null,"native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1463,"method":"require","native":false}]}
